# core-node-bridge

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docs/: ADD_NEW_COMMAND.md  MASTERPLAN.md  STRUKTUR.md  TESTING.md  defaultCommantObjekt.md
frontend/: package-lock.json  tsconfig.json
frontend/src/: App.module.scss  App.tsx  i18n.ts  index.css  main.tsx  rpcConfig.ts  schema.ts
frontend/src/components/: RpcCommandTerminal.tsx
frontend/src/locales/de/: translation.ts
frontend/src/locales/de/commands/: blockchain.ts  control.ts  mining.ts  network.ts  rawtransactions.ts  signer.ts  util.ts  wallet.ts  zmq.ts
frontend/src/locales/en/: translation.ts
frontend/src/tests/: blockchain-commands.spec.ts
frontend/src/types/: translations.d.ts
scripts/: categories.json  checkTranslations.js  rpcCommandsByCategory.json
src/: lib.rs  main.rs
tests/: blockchain_query_tests.rs
