[package]
name = "core_node_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
bitcoincore-rpc = "0.18.0"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
